--- a/router-bug.html
+++ b/router-bug.html
@@ -3,13 +3,9 @@
   {{yield}}
 </template>
 
-<template name="posts">
-  <h2>Posts</h2>
+<template name="home">
+  <h2>Home</h2>
   <a href="/SomeRandomLink">Random Link</a>
-</template>
-
-<template name="post">
-  <h2>Post</h2>
 </template>
 
 
