--- a/router-bug.html
+++ b/router-bug.html
@@ -5,10 +5,19 @@
 
 <template name="home">
   <h2>Home</h2>
+  <a href="/posts">A Link That Works</a>
   <a href="/SomeRandomLink">Random Link</a>
 </template>
 
+<template name="posts">
+  <h2>Posts</h2>
+<ul><li>lorem</li><li>ipsum</li></ul>
+</template>
 
 <template name="notFound">
   <h2>Not Found!!!</h2>
+</template>
+
+<template name="helloWorld">
+  <h2>Hello World</h2>
 </template>
